[package]
name = "elgamal"
version = "0.0.1"
edition = "2018"
authors = [
    "Omer <omer.shlomovits@gmail.com>"
]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.3"

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"

