[package]
name = "elgamal"
version = "0.0.2"
edition = "2018"
authors = [
    "Omer <omer.shlomovits@gmail.com>",
    "Bernhard <boneyard93501@gmail.com>"
]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
curv-kzen = "0.9.0"

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"
criterion = "0.3.3"

[[bench]]
name = "elgamal_benchmarks"
harness = false

