[package]
name = "two_party_keyexchange"
version = "0.1.0"
authors = ["boneyard93501 <4523011+boneyard93501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = "0.4.2"
actix-web = "3.1.0"
actix-rt = "1.1.1"
uuid = {version="0.8.1", features=["serde", "v4"]}


[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.6"
features = ["ec_secp256k1"]

[dependencies.elgamal]
# git = "https://github.com/ZenGo-X/rust-elgamal" 
path = "/Users/bebo/localdev/bb-rust-elgamal"